refactor: completely change structure to old swagger server generation and fix environment trailing /
