# swagger_server/controllers/default_controller.py
@@ -1,54 +1,48 @@
 import connexion
 import six
 
+from swagger_server.models.inline_response200 import InlineResponse200  # noqa: E501
 from swagger_server.models.student import Student  # noqa: E501
-from swagger_server.service.student_service import *
 from swagger_server import util
+from swagger_server.service.student_service import *
 
 
-def add_student(body=None):  # noqa: E501 
-    """Add a new student 
- 
-    Adds an item to the system # noqa: E501 
- 
-    :param body: Student item to add 
-    :type body: dict | bytes 
- 
-    :rtype: float 
-    """ 
-    if connexion.request.is_json: 
-        body = Student.from_dict(connexion.request.get_json())  # noqa: E501 
-        return add(body) 
-    return 500,'error'
+def add_student(body=None):  # noqa: E501
+    """Add a new student
+
+    Adds an item to the system  # noqa: E501
+    :param body: Student item to add
+    :type body: dict | bytes
+    :rtype: float
+    """
+    if connexion.request.is_json:
+        body = Student.from_dict(connexion.request.get_json())  # noqa: E501
+        return add(body)
+
+    return 500, "error"
 
 
 def delete_student(student_id):  # noqa: E501
-    """deletes a student
+    """Delete student
 
-    delete a single student  # noqa: E501
+    Deletes a single student # noqa: E501
 
-    :param student_id: the uid
-    :type student_id: 
+    :param student_id: The uid
+    :type student_id: float
 
-    :rtype: object
+    :rtype: InlineResponse200
     """
-    if connexion.request.is_json: 
-        body = Student.from_dict(connexion.request.get_json())  # noqa: E501 
-        return delete(student_id)
-    return 500,'error'
+    return delete(student_id)
 
 
 def get_student_by_id(student_id):  # noqa: E501
-    """gets student
+    """Get student
 
     Returns a single student # noqa: E501
 
-    :param student_id: the uid
+    :param student_id: The student&#x27;s unique identifier
     :type student_id: 
 
     :rtype: Student
     """
-    if connexion.request.is_json: 
-        body = Student.from_dict(connexion.request.get_json())  # noqa: E501 
-        return get_by_id(student_id)
-    return 500,'error'
+    return get_by_id(student_id)
