# swagger_server/models/student.py
@@ -6,8 +6,8 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from swagger_server.models.base_model_ import Model
+from swagger_server.models.grade_record import GradeRecord  # noqa: F401,E501
 from swagger_server import util
-
 
 
 class Student(Model):
@@ -15,24 +15,23 @@ class Student(Model):
 
     Do not edit the class manually.
     """
-
-    def __init__(self, student_id: int = None, first_name: str = None, last_name: str = None, grade_records: List[object] = None):  # noqa: E501
+    def __init__(self, student_id: float=None, first_name: str=None, last_name: str=None, grade_records: List[GradeRecord]=None):  # noqa: E501
         """Student - a model defined in Swagger
 
         :param student_id: The student_id of this Student.  # noqa: E501
-        :type student_id: int
+        :type student_id: float
         :param first_name: The first_name of this Student.  # noqa: E501
         :type first_name: str
         :param last_name: The last_name of this Student.  # noqa: E501
         :type last_name: str
         :param grade_records: The grade_records of this Student.  # noqa: E501
-        :type grade_records: List[object]
+        :type grade_records: List[GradeRecord]
         """
         self.swagger_types = {
-            'student_id': int,
+            'student_id': float,
             'first_name': str,
             'last_name': str,
-            'grade_records': List[object]
+            'grade_records': List[GradeRecord]
         }
 
         self.attribute_map = {
@@ -58,22 +57,22 @@ class Student(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def student_id(self) -> int:
+    def student_id(self) -> float:
         """Gets the student_id of this Student.
 
 
         :return: The student_id of this Student.
-        :rtype: int
+        :rtype: float
         """
         return self._student_id
 
     @student_id.setter
-    def student_id(self, student_id: int):
+    def student_id(self, student_id: float):
         """Sets the student_id of this Student.
 
 
         :param student_id: The student_id of this Student.
-        :type student_id: int
+        :type student_id: float
         """
 
         self._student_id = student_id
@@ -96,6 +95,8 @@ class Student(Model):
         :param first_name: The first_name of this Student.
         :type first_name: str
         """
+        if first_name is None:
+            raise ValueError("Invalid value for `first_name`, must not be `None`")  # noqa: E501
 
         self._first_name = first_name
 
@@ -117,26 +118,28 @@ class Student(Model):
         :param last_name: The last_name of this Student.
         :type last_name: str
         """
+        if last_name is None:
+            raise ValueError("Invalid value for `last_name`, must not be `None`")  # noqa: E501
 
         self._last_name = last_name
 
     @property
-    def grade_records(self) -> List[object]:
+    def grade_records(self) -> List[GradeRecord]:
         """Gets the grade_records of this Student.
 
 
         :return: The grade_records of this Student.
-        :rtype: List[object]
+        :rtype: List[GradeRecord]
         """
         return self._grade_records
 
     @grade_records.setter
-    def grade_records(self, grade_records: List[object]):
+    def grade_records(self, grade_records: List[GradeRecord]):
         """Sets the grade_records of this Student.
 
 
         :param grade_records: The grade_records of this Student.
-        :type grade_records: List[object]
+        :type grade_records: List[GradeRecord]
         """
 
         self._grade_records = grade_records
